?xml version="1.0" encoding="utf-8"?>
<RelativeLayout tools:context="com.example.tipcalculatorv1.MainActivity"
    android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"><![CDATA[
    tools:context=".MainActivity">





    ]]><!-- red line -->

    <TextView
        android:id="@+id/label_bill"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="37dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:minWidth="120dp"
        android:text="@string/label_bill"
        android:textAlignment="center"
        android:textColor="#5A5555"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/amount_bill"
        style="@style/InputStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/label_bill"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="2dp"
        android:layout_toRightOf="@+id/label_bill"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/amount_bill_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#5A5555"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_tip_percent"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_below="@+id/label_bill"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="31dp"
        android:layout_marginRight="0dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/label_tip_percent"
        android:textAlignment="center"
        android:textColor="#5A5555"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/amount_tip_percent"
        style="@style/InputStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignRight="@id/amount_bill"
        android:layout_alignBottom="@+id/label_tip_percent"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-2dp"
        android:layout_toRightOf="@+id/label_tip_percent"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/amount_tip_percent_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#5A5555"
        android:textSize="20sp" />

    <View
        android:id="@+id/red_line"
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_below="@+id/label_tip_percent"
        android:layout_alignLeft="@id/label_bill"
        android:layout_alignRight="@id/amount_bill"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="-2dp"
        android:background="#FF00" />

    <TextView
        android:id="@+id/label_tip"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/red_line"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="-1dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/label_tip"
        android:textAlignment="center"
        android:textColor="#5A5555"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/amount_tip"
        style="@style/OutputStyle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignRight="@id/amount_bill"
        android:layout_alignBottom="@+id/label_tip"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="0dp"
        android:layout_toRightOf="@+id/label_tip"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_total"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/label_tip"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="31dp"
        android:layout_marginRight="0dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/label_total"
        android:textAlignment="center"
        android:textColor="#5A5555"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/amount_total"
        style="@style/OutputStyle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignRight="@id/amount_bill"
        android:layout_alignBottom="@+id/label_total"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="0dp"
        android:layout_toRightOf="@+id/label_total"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textSize="20sp" />

    <Button
        style="@style/ButtonStyle"
        android:layout_below="@+id/amount_total"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#379C1D"
        android:onClick="calculate"
        android:text="@string/button_calculate" />

</RelativeLayout>